# LifeGoodSkill

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  README.md  README.zh.md
.claude-plugin/: marketplace.json
.claude/commands/: skill-searcher.md
.claude/skills/: sf-metadata  skill-builder
chat/: 2026-01-23-42plugin-clititle-cli.txt  Network20260123113132.md  chat_latest.jsonl
doc/: skill-enhancement-suggestions.md
mcp-servers/skill-searcher/: package.json  server.js
skills/chat-log-analyzer/: SKILL.md
skills/chat-to-markdown/: SKILL.md
skills/generating-mermaid-diagrams/: SKILL.md  package.json
skills/life-compass/: SKILL.md
skills/life-daily-starter/: SKILL.md
skills/life-decision-analysis/: SKILL.md
skills/life-dotfiles-manager/: SKILL.md
skills/life-evening-review/: SKILL.md
skills/life-excel-diff/: SKILL.md
skills/life-file-organizer/: SKILL.md
skills/life-intention-committee/: SKILL.md
skills/life-interrupt-prompts/: SKILL.md
skills/life-interview-guide/: SKILL.md
skills/life-knowledge-sync/: SKILL.md
skills/life-markdown-normalizer/: SKILL.md
skills/life-meeting-summary/: SKILL.md
skills/life-mermaid-master/: SKILL.md
skills/life-mole-cleaner/: SKILL.md
skills/life-network-troubleshooter/: SKILL.md
skills/life-okr-generator/: SKILL.md
skills/life-pdf-to-ppt/: SKILL.md
skills/life-pdf-to-ppt/assets/: .env.example  pyproject.toml  requirements.txt
skills/life-problem-solver/: SKILL.md
skills/life-self-assessment/: SKILL.md
skills/life-self-awareness/: SKILL.md
skills/life-task-breakdown/: SKILL.md
(+107 files in other folders)
